final documentation update
